--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,12 @@ a {
   box-sizing: border-box;
 }
 
+.MuiCard-root{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
