--- a/styles/SoloRace.module.css
+++ b/styles/SoloRace.module.css
@@ -1,16 +1,16 @@
-.gameWords{
+.gameWords {
   font-size: 20px;
 }
-.currentLetterCursor{
+.currentLetterCursor {
   width: 1px;
-  border-left: .5px solid black;
+  border-left: 0.5px solid black;
   animation-name: currentLetterCursor;
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
 }
 
-@keyframes currentLetterCursor{
-  50%{
-    border-left: .5px solid transparent;
+@keyframes currentLetterCursor {
+  50% {
+    border-left: 0.5px solid transparent;
   }
 }
