clean up and add light and dark theme
Theme can be toggled between light and dark mode. Cleaned up some code removing unused imports and formatting fixes. Next need to add to content to the home page

--- a/styles/SoloRace.module.css
+++ b/styles/SoloRace.module.css
@@ -1,7 +1,14 @@
 .gameWords {
   font-size: 20px;
 }
-.currentLetterCursor {
+.currentLetterCursorLight {
+  width: 1px;
+  border-left: 0.5px solid white;
+  animation-name: currentLetterCursor;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+}
+.currentLetterCursorDark {
   width: 1px;
   border-left: 0.5px solid black;
   animation-name: currentLetterCursor;
